# dynamic-odme-lab

./: .gitattributes  .gitignore  CHANGELOG.md  DATA_SOURCES.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
benchmarks/00_tiny_panel/: link.csv  measurement.csv  node.csv  od.csv  od_demand_true.csv  path.csv  sensor.csv  settings.yaml
benchmarks/01_four_node/: link_performance.csv  matrix_A.csv  odme_link_volume_validation.csv  odme_log.csv  readiness_report.md  route_assignment.csv
benchmarks/02_sioux_falls/: README.md  columns.csv  matrix_A.csv  odme_link_volume_validation.csv  odme_log.csv  output_link_count.csv  readiness_report.md  settings.yml
benchmarks/03_west_jordan_utah/: matrix_A.csv  (+3 more)
docs/: 00_reproducibility_guidebook.md  01_formulation_teaching_guide.md  02_input_data_dictionary.md  03_matrix_free_operator_guide.md  04_dynamic_phi_recovery_guide.md  05_profile_rag_guide.md  06_qvdf_queue_physics_guide.md  07_solver_testing_guide.md  08_calibration_gate_guide.md  09_private_data_policy.md  10_bounded_lowrank_odme.md
examples/: run_bounded_odme.py  run_full_reproducibility_check.py  run_matrix_free_operator.py  run_observability_gate.py  run_phi_recovery.py  run_profile_mixture.py  run_queue_one_link.py  run_tiny_panel.py
odme/: README.md  __init__.py  cli.py  model.py
scripts/: clean_outputs.py  make_release_package.py  validate_no_private_data.py
tests/: test_bounded_odme.py  test_congestion_duration.py  test_constraints.py  test_fluid_queue.py  test_operator.py  test_phi_recovery.py  test_profile_library.py
(+90 files in other folders)
