[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-odme-lab"
version = "0.2.0"
description = "Reproducible dynamic ODME research kernel: matrix-free operators, departure-profile recovery, profile-basis regularization, bounded low-rank OD adjustment, calibration gates, and experimental queue/QVDF diagnostics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dynamic-odme-lab contributors" }]
keywords = ["ODME", "origin-destination", "traffic-assignment", "departure-profile", "QVDF", "GMNS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21", "scipy>=1.7", "matplotlib>=3.4", "PyYAML>=5.4"]

[project.urls]
Source = "https://github.com/asu-trans-ai-lab/dynamic-odme-lab"

[tool.setuptools.packages.find]
include = ["odme*"]
